# top_donators

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  database.py  docker-compose.yml  email_config.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  test.html  test.js
alembic/: env.py
alembic/versions/: 508f00afa312_добавил_аватара.py  7bdfcc1065cd_добавить_last_donation_time.py  91ac54007d1c_добавлен_created_at_в_users.py  a07778a5c4c0_добавил_поле_avatar.py  fabdce2fc019_create_users_and_donations_tables.py
routers/: auth.py  auth_api.py  password_reset.py
static/: ads.json
static/css/: welcome.css
static/js/: welcome.js
templates/: forgot_password.html  index.html  login.html  payment.html  profile.html  register.html  reset_password.html  send_ad.html  welcome.html
